--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wmga-express",
-  "version": "0.0.1",
+  "version": "0.0.1-2",
   "private": true,
   "scripts": {
     "start": "app.js"
@@ -21,5 +21,9 @@
     "request": "~2.27.0",
     "time-grunt": "~0.1.1",
     "load-grunt-tasks": "~0.2.0"
+  },
+  "subdomain": "wmga",
+  "engines": {
+    "node": "0.10.x"
   }
 }
