--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongoose": "~3.6.20",
     "restify": "~2.6.1",
     "cors": "~2.1.1",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "password-hash": "~1.2.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
