--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-compass": "~0.6.0",
     "request": "~2.27.0",
     "time-grunt": "~0.1.1",
-    "load-grunt-tasks": "~0.2.0"
+    "load-grunt-tasks": "~0.2.0",
+    "stdio": "~0.1.5"
   },
   "subdomain": "wmga",
   "engines": {
