--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "westwoodmensgolf.org",
     "www.westwoodmensgolf.org"
   ],
-  "version": "0.2.0",
+  "version": "1.0.3",
   "private": true,
   "scripts": {
     "start": "app.js"
@@ -19,7 +19,8 @@
     "underscore": "~1.5.2",
     "password-hash": "~1.2.1",
     "paypal-ipn": "~1.0.1",
-    "mandrill-api": "~1.0.39"
+    "mandrill-api": "~1.0.39",
+    "twilio": "~1.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
