--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "westwoodmensgolf.org",
     "www.westwoodmensgolf.org"
   ],
-  "version": "1.1.12",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "start": "app.js"
@@ -20,7 +20,8 @@
     "password-hash": "~1.2.1",
     "paypal-ipn": "~1.0.1",
     "mandrill-api": "~1.0.39",
-    "twilio": "~1.6.0"
+    "twilio": "~1.6.0",
+    "aws-sdk": "~2.0.0-rc13"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
